ingress/aws/two-svc-1-alb/whoami-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-a
  labels:
    app: whoami-Aku
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: whoami-A
    
---

apiVersion: v1
kind: Service
metadata:
  name: whoami-b
  labels:
    app: whoami-B
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: whoami-B
