ingress/aws/two-svc-1-alb/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "whoami-a"
  labels:
    app: whoami-A
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: whoami-group
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /a
        pathType: Prefix
        backend:
          service:
            name: whoami-a
            port: 
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "whoami-b"
  labels:
    app: whoami-B
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: whoami-group
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /b
        pathType: Prefix
        backend:
          service:
            name: whoami-b
            port: 
              number: 80
